@@ -1,5 +1,6 @@
 1.3.6 - TBD
 
+* Added chunk count column in scene selector table.
 * Added output mode selector in the advanced tab, with an option to select PNG
   output with higher bit depth (16-bit color components).
 * Changed the postprocess JSON variable to String.
